--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,7 +39,9 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
       - name: Build with Gradle
-        run: ./gradlew test
+        run: | 
+          gradle wrapper
+          ./gradlew test
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
