feat: only post problem tests

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,10 +39,10 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
       - name: Build with Gradle
-        run: | 
+        run: |
           echo "${{ secrets.DAY00_INPUT_TXT }}" > app/src/main/resources/inputs/day00/input.txt
           gradle wrapper
-          ./gradlew test
+          ./gradlew test --tests "*.testProblem*"
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
