--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -43,7 +43,7 @@ jobs:
           echo "${{ secrets.DAY00_INPUT_TXT }}" > app/src/main/resources/inputs/day00/input.txt
           echo "${{ secrets.DAY01_INPUT_TXT }}" > app/src/main/resources/inputs/day01/input.txt
           gradle wrapper
-          ./gradlew test --tests "*.testProblem*"
+          ./gradlew test --tests "*.testPart*"
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
