--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -51,7 +51,8 @@ jobs:
           gradle wrapper
           ./gradlew test
           ./gradlew run
-      - uses: actions/upload-artifact@v4
+      - name: Upload gradle build and test report if failed
+        uses: actions/upload-artifact@v4
         if: ${{ steps.build-with-gradle.outcome == 'failure' }}
         with:
           path: app/build/reports/tests/test/
