--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
           echo "${{ secrets.DAY01_INPUT_TXT }}" > app/src/main/resources/inputs/day01/input.txt
           echo "${{ secrets.DAY02_INPUT_TXT }}" > app/src/main/resources/inputs/day02/input.txt
+          echo "${{ secrets.DAY03_INPUT_TXT }}" > app/src/main/resources/inputs/day03/input.txt
           gradle wrapper
           ./gradlew test
           ./gradlew run
