--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -51,6 +51,7 @@ jobs:
           echo "${{ secrets.DAY03_INPUT_TXT }}" > app/src/main/resources/inputs/day03/input.txt
           echo "${{ secrets.DAY04_INPUT_TXT }}" > app/src/main/resources/inputs/day04/input.txt
           echo "${{ secrets.DAY05_INPUT_TXT }}" > app/src/main/resources/inputs/day05/input.txt
+          echo "${{ secrets.DAY06_INPUT_TXT }}" > app/src/main/resources/inputs/day06/input.txt
           gradle wrapper
           ./gradlew test
           ./gradlew run
