feat: day 07 part 01

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -52,6 +52,7 @@ jobs:
           echo "${{ secrets.DAY04_INPUT_TXT }}" > app/src/main/resources/inputs/day04/input.txt
           echo "${{ secrets.DAY05_INPUT_TXT }}" > app/src/main/resources/inputs/day05/input.txt
           echo "${{ secrets.DAY06_INPUT_TXT }}" > app/src/main/resources/inputs/day06/input.txt
+          echo "${{ secrets.DAY07_INPUT_TXT }}" > app/src/main/resources/inputs/day07/input.txt
           gradle wrapper
           ./gradlew test
           ./gradlew run
