--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -54,6 +54,7 @@ jobs:
           echo "${{ secrets.DAY06_INPUT_TXT }}" > app/src/main/resources/inputs/day06/input.txt
           echo "${{ secrets.DAY07_INPUT_TXT }}" > app/src/main/resources/inputs/day07/input.txt
           echo "${{ secrets.DAY08_INPUT_TXT }}" > app/src/main/resources/inputs/day08/input.txt
+          echo "${{ secrets.DAY09_INPUT_TXT }}" > app/src/main/resources/inputs/day09/input.txt
           gradle wrapper
           ./gradlew test
           ./gradlew run
